# privlog

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CNAME  index.html
logmaster/: ast_checks.py  cli.py  formatter.py  runner.py
logmaster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
privlog/: __init__.py  ast_checks.py  cli.py  formatter.py  runner.py
privlog/rules/: privlog.yml
