[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "privlog"
version = "0.1.0"
description = "Privacy-aware logging hygiene linter for Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name="Christopher Mariani"}
]
license = { text = "Proprietary" }
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.0",
  "semgrep>=1.0",
]

[project.scripts]
privlog = "privlog.cli:app"

[tool.setuptools]
packages = ["privlog"]

[tool.setuptools.package-data]
privlog = ["rules/*.yml", "rules/*.yaml"]
