[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "privlog"
version = "0.2.2"
description = "Privacy-aware logging hygiene linter for Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name="Christopher Mariani"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.0",
  "semgrep>=1.0",
  'tomli; python_version < "3.11"',
]

[project.scripts]
privlog = "privlog.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["privlog*"]

[tool.setuptools.package-data]
privlog = ["rules/*.yml", "rules/*.yaml"]
